# corp_one

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  rustfmt.toml
benches/: Cargo.toml  README.md
benches/benches/which/: raw_data.rs  which_to_use.rs
client/: Cargo.toml
client/src/: input.rs  main.rs  world.rs
client/src/gui/: metrics.rs
client/src/input/: mouse.rs
client/src/world/: character.rs  cursor.rs  input_control.rs  player.rs  scene.rs  world_utils.rs  zone.rs
corp/: Cargo.toml
corp/src/: asset.rs  connection.rs  constants.rs  gui.rs  loading.rs  main.rs  paths.rs  world.rs
corp/src/asset/: loading.rs
corp/src/audio/: live.rs
corp/src/gui/: console.rs  metrics.rs
corp/src/world/: agency.rs  camera.rs  character.rs  control.rs  cube.rs  cube_spawner.rs  flying_cubes.rs  input_command.rs  input_control.rs  player.rs  player_bundle.rs  scene.rs
corp/src/world/agency/: control.rs  input.rs
corp_client/: Cargo.toml
corp_client/assets/data/colony/: cloning.colony  iris.colony  liberte.colony
corp_client/assets/mesh/: backpack.glb  low_poly_backpack.glb
corp_client/assets/mesh/mannequiny/: mannequiny.gltf
corp_client/assets/scenes/: cloning.scn  iris.scn  liberte.scn
corp_client/assets/scenes/cloning/: cloning.glb  cloning.scn
corp_client/assets/scenes/iris/: iris.glb  iris.scn  mesh.scn
corp_client/assets/scenes/liberte/: liberte.glb  liberte.scn
corp_client/assets/scenes/void/: void.scn
corp_client/assets/shaders/: barrier.wgsl  starfield.wgsl
corp_client/assets/shaders_ex/: barrier_ex.wgsl  distortion.wgsl  star_field_ex.wgsl  starfield_ex.wgsl
corp_client/config/: binding.json
corp_client/examples/: animation.rs  local_to_world.rs  look.rs  look_trigger.rs  observer.rs  pick.rs  radial_trigger.rs  transforms.rs  vector_bullet.rs
corp_client/examples/ccc/: camera.rs  ccc.rs  character.rs  control.rs  movement.rs
corp_client/examples/shader/: barrier.rs  distortion.rs  force_field.rs  star_field.rs  starfield.rs
corp_client/examples/state/: backpack.rs  door.rs  endesga.rs  faction.rs  gui.rs  interactive.rs  inventory.rs  item.rs  ray.rs  state.rs  test_utils.rs
corp_client/examples/transform/: clamp.rs
corp_client/src/: asset.rs  backend.rs  client.rs  client_backend.rs  client_frontend.rs  connection.rs  constants.rs  frontend.rs  gui.rs  input.rs  lib.rs  main.rs  sound.rs  world.rs
corp_client/src/asset/: asset_loading.rs  colony_configs.rs  mod.rs  path.rs  paths.rs
corp_client/src/audio/: live.rs
corp_client/src/frontend/: frontend.rs  mod.rs
corp_client/src/gui/: cursor.rs  cursor_ui.rs  debug.rs  gui.rs  login.rs  login_screen.rs  metrics.rs  mod.rs
corp_client/src/input/: double_tap.rs  input_command.rs
corp_client/src/network/: client.rs  mod.rs  replicate.rs  settings.rs  spawn_listener.rs
corp_client/src/sound/: mod.rs  sound.rs
corp_client/src/state/: game_state.rs  mod.rs  state.rs
corp_client/src/util/: mesh_extension.rs  mod.rs
corp_client/src/world/: animator.rs  camera.rs  character.rs  cloning.rs  colony.rs  cursor.rs  flying_cubes.rs  input_command.rs  input_control.rs  mod.rs  physics.rs  player.rs  player_bundle.rs  scene.rs  shader.rs  star_map.rs  world.rs  zone.rs
corp_client/src/world/ccc/: camera.rs  character.rs  control.rs  double_tap.rs  mod.rs  movement.rs
corp_client/src/world/colony/: asset.rs  asset_color.rs  barrier.rs  colony.rs  colony_assets.rs  colony_interaction.rs  colony_loader.rs  intractable.rs  mod.rs  object_interaction.rs  scene_hook.rs  (+3 more)
corp_client/tests/: typetate.rs
corp_client/tests/game_math/: trigonometry.rs  vectors_and_dot_prod.rs
corp_client/tests/learn_rust/: any_trait.rs  choose_right_option.rs  generic_types.rs  ownership.rs
corp_client/tests/statistics/: prnd_wyrand.rs
corp_login/: Cargo.toml  README.md
corp_login/migrations/: 001_create_users_table.sql  002_seed_demo_users.sql  003_create_tokens_table.sql
corp_login/src/: app.rs  auth.rs  database.rs  event.rs  handlers.rs  lib.rs  main.rs  migrate.rs
corp_proxy/: Cargo.toml
corp_proxy/src/: init.rs  lib.rs
corp_server/: .surrealdb  Cargo.toml  README.md  docker-compose.yml
corp_server/db/: database.sqlite
corp_server/db/migration/: 01_database.sql
corp_server/db/migrations/: 20230915_233844_InitDemoData.surql
corp_server/db/schemas/: colony.surql  faction.surql  script_migration.surql  user.surql
corp_server/src/: config.rs  database.rs  game.rs  log.rs  login.rs  main.rs  proxy.rs  server.rs  table.rs  token.rs
corp_server/src/game/: app.rs  cloning.rs  config.rs  database.rs  door.rs  health.rs  instance.rs  mod.rs  player.rs  server.rs  session.rs  spawn.rs
corp_server/src/server/: app.rs  cloning.rs  config.rs  database.rs  death.rs  health.rs  instance.rs  loot.rs  mod.rs  players.rs  server.rs  token.rs
corp_server/tests/network/: message.rs  tower.rs
corp_shared/: Cargo.toml
corp_shared/src/: components.rs  lib.rs  log.rs
corp_shared/src/asset/: endesga.rs  mod.rs
corp_shared/src/components/: health.rs
corp_shared/src/items/: inventory.rs  item.rs
corp_shared/src/network/: auth.rs  config.rs  mod.rs  protocol.rs  replicate_rules.rs  user.rs
corp_shared/src/state/: mod.rs  state.rs
corp_shared/src/stats/: health.rs
corp_shared/src/util/: test_utils.rs
corp_shared/src/world/: colony.rs  faction.rs  interaction.rs  interactive.rs  mod.rs  physics.rs  player.rs  security.rs  use.rs
crates/corp-input/: Cargo.toml
crates/corp-input/src/: control.rs  input_plugin.rs  lib.rs
crates/corp-live/: Cargo.toml
crates/corp-live/src/: lib.rs  live_plugin.rs
crates/corp_tests/: Cargo.toml
crates/corp_tests/tests/: common_collections.rs  lib.rs
tests/: Cargo.toml  README.md
tests/tests/: game_math.rs  learn_rust.rs  lib.rs  typetate.rs
tests/tests/game_math/: vectors_and_dot_prod.rs
tests/tests/learn_rust/: any_trait.rs  error_handling.rs  guess_game.rs  higher_ranked_trait_bounds.rs
tests/tests/statistics/: flat_distribution.rs  mod.rs  prnd_std_rng.rs  prnd_wyrand.rs  pseudo_random_distribution.rs
(+88 files in other folders)
