[workspace]
resolver = "2"

exclude = ["benches"]
members = [
    "corp_client",
    "corp_server",
    "corp_shared",
    "corp_proxy",
    "tools/ci",
]
default-members = ["corp_client", "corp_server", "corp_shared", "corp_proxy"]

[workspace.dependencies]
bevy = { version = "0.16", default-features = false }
serde = { version = "1", default-features = false }
avian3d = { version = "0.3", default-features = false }
rand = "0.8"
bevy_rand = { version = "0.11", features = ["wyrand"] }
tokio = { version = "1.45", default-features = false }
anyhow = "1.0.98"

aeronet = { version = "0.14", default-features = false }
aeronet_webtransport = { version = "0.14", default-features = false }
aeronet_replicon = { version = "0.14", default-features = false }
bevy_replicon = { version = "0.33", default-features = false }
