[workspace]
resolver = "2"

exclude = ["benches"]
members = [
    "corp_client",
    "corp_server",
    "corp_shared",
    "corp_proxy",
    "tools/ci", "corp_login",
]
default-members = ["corp_client", "corp_server", "corp_shared", "corp_proxy"]

[workspace.dependencies]
bevy = { version = "0.16.1", default-features = false }
serde = { version = "1", default-features = false }
avian3d = { version = "0.3", default-features = false }
rand = "0.8"
bevy_rand = { version = "0.11", features = ["wyrand"] }
tokio = { version = "1.45", default-features = false }
anyhow = "1.0.98"
surf = { version = "2.3", default-features = false, features = ["h1-client-rustls", "encoding"] }

aeronet = { path = "../temp/aeronet/crates/aeronet", default-features = false }
aeronet_webtransport = { path = "../temp/aeronet/crates/aeronet_webtransport", default-features = false }
aeronet_replicon = { path = "../temp/aeronet/crates/aeronet_replicon", default-features = false }
bevy_replicon = { version = "0.34.3", default-features = false }
bevy_defer = { version = "0.14.0", default-features = false }
