[package]
name = "corp_client"
version = "0.1.0"
authors = ["marko.lazic <markolazic@protonmail.com>"]
edition = "2021"

[dependencies]
corp_shared = { path = "../corp_shared", features = ["client"] }
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_ui",
    "bevy_text",
    "animation",
    "tonemapping_luts",
    "bevy_animation",
    "bevy_winit",
    "dynamic_linking",
    "png",
    "bevy_gltf",
] }
avian3d = { workspace = true, features = ["default", "enhanced-determinism"] }
lightyear = { workspace = true, features = ["webtransport", "leafwing"] }
serde = { workspace = true }
leafwing-input-manager = { version = "0.16.0" }
bevy-inspector-egui = "0.28.0"
bevy_asset_loader = { version = "0.22.0", default-features = false, features = [
    "3d",
] }
bevy_kira_audio = { version = "0.21.0", default-features = false, features = [
    "wav",
    "ogg",
] }
bevy_common_assets = { version = "0.12.0", features = ["ron"] }
bevy-tnua = "0.21.0"
bevy-tnua-avian3d = "0.2.0"
bevy_dolly = { version = "0.0.5", default-features = false, features = [
    "drivers",
] }
bevy-scene-hook = { git = "https://github.com/AlephCubed/bevy-scene-hook.git", branch = "main" }
bevy_framepace = "0.18.0"
rand = { workspace = true }

[dev-dependencies]
bevy_panorbit_camera = "0.21.1"


[[example]]
name = "transforms"
path = "examples/transforms.rs"

[[example]]
name = "vector_bullet"
path = "examples/vector_bullet.rs"

[[example]]
name = "barrier"
path = "examples/shader/barrier.rs"

[[example]]
name = "force_field"
path = "examples/shader/force_field.rs"

[[example]]
name = "state"
path = "examples/state/state.rs"

[[example]]
name = "observer"
path = "examples/observer.rs"
