[package]
name = "corp_client"
version = "0.1.0"
authors = ["marko.lazic <markolazic@protonmail.com>"]
edition = "2021"

[dependencies]
corp_shared = { path = "../corp_shared", features = ["client"] }
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_ui",
    "bevy_text",
    "animation",
    "tonemapping_luts",
    "bevy_animation",
    "bevy_winit",
    "dynamic_linking",
    "png",
    "bevy_gltf",
] }
avian3d = { workspace = true, features = ["default", "enhanced-determinism", "serialize"] }
leafwing-input-manager = { version = "0.16" }
bevy-inspector-egui = "0.30"
bevy_asset_loader = { version = "0.22.0", default-features = false, features = [
    "3d",
] }
bevy_kira_audio = { version = "0.22", default-features = false, features = [
    "wav",
    "ogg",
] }
bevy-tnua = "0.21.0"
bevy-tnua-avian3d = "0.2.0"
bevy_dolly = { version = "0.0.5", default-features = false, features = [
    "drivers",
] }
bevy_skein = { version = "0.1.2" }
bevy_framepace = "0.18"
rand = { workspace = true }
bevy_rand = { workspace = true }
aeronet = { workspace = true }
aeronet_webtransport = { workspace = true, features = ["client", "dangerous-configuration"] }
aeronet_replicon = { workspace = true, features = ["client"] }
bevy_replicon = { workspace = true, features = ["default"] }

[dev-dependencies]
bevy_panorbit_camera = "0.23"


[[example]]
name = "transforms"
path = "examples/transforms.rs"

[[example]]
name = "vector_bullet"
path = "examples/vector_bullet.rs"

[[example]]
name = "barrier"
path = "examples/shader/barrier.rs"

[[example]]
name = "force_field"
path = "examples/shader/force_field.rs"

[[example]]
name = "state"
path = "examples/state/state.rs"

[[example]]
name = "observer"
path = "examples/observer.rs"
