[package]
name = "corp_client"
version = "0.1.0"
authors = ["marko.lazic <markolazic@protonmail.com>"]
edition = "2024"

[dependencies]
corp_shared = { path = "../corp_shared", features = ["client"] }
corp_types = { path = "../corp_types" }
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_ui",
    "bevy_text",
    "animation",
    "tonemapping_luts",
    "bevy_animation",
    "bevy_winit",
    "dynamic_linking",
    "png",
    "bevy_gltf",
    "track_location",
    "configurable_error_handler"
] }
avian3d = { workspace = true, features = ["default", "enhanced-determinism", "serialize"] }
bevy_enhanced_input = "0.11"
bevy-inspector-egui = "0.31"
bevy_asset_loader = { version = "0.23.0", default-features = false, features = ["3d"] }
bevy_kira_audio = { version = "0.23", default-features = false, features = [
    "wav",
    "ogg",
] }
bevy-tnua = "0.24.0"
bevy-tnua-avian3d = "0.5.0"
bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly.git", branch = "bevy_0.16", default-features = false, features = [
    "drivers",
] }
bevy_skein = { version = "0.2" }
bevy_framepace = "0.19"
rand = { workspace = true }
bevy_rand = { workspace = true }
aeronet = { workspace = true }
aeronet_webtransport = { workspace = true, features = ["client", "dangerous-configuration"] }
aeronet_replicon = { workspace = true, features = ["client"] }
bevy_replicon = { workspace = true, features = ["default"] }
bevy_defer = { workspace = true, features = ["default"] }
log = "0.4.27"
clap = { version = "4.0", features = ["derive"] }
surf = { workspace = true }

[dev-dependencies]
bevy_panorbit_camera = "0.26"


[[example]]
name = "transforms"
path = "examples/transforms.rs"

[[example]]
name = "vector_bullet"
path = "examples/vector_bullet.rs"

[[example]]
name = "barrier"
path = "examples/shader/barrier.rs"

[[example]]
name = "force_field"
path = "examples/shader/force_field.rs"

[[example]]
name = "state"
path = "examples/state/state.rs"

[[example]]
name = "observer"
path = "examples/observer.rs"
