[package]
name = "corp_login"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "corp_login"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/migrate.rs"

[dependencies]
corp_types = { path = "../corp_types" }

axum = "0.8.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
directories = "6.0"
kameo = { workspace = true }
kameo_actors = { workspace = true }
