[package]
name = "corp_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }
log = "0.4"
env_logger = "0.11"
anyhow = { workspace = true }
wtransport = { version = "0.6", features = ["dangerous-configuration"] }
tracing = "0.1"
tokio-util = "0.7"
corp_shared = { path = "../corp_shared" }