[package]
name = "corp_server"
version = "0.1.0"
authors = ["Marko Lazić <marko.lazic@comyno.com>"]
edition = "2021"

[dependencies]
corp_shared = { path = "../corp_shared" }
bevy = { workspace = true, features = [
    "bevy_state",
    "bevy_color",
    "async-io",
    "multi_threaded",
    "serialize",
] }
avian3d = { workspace = true, features = [
    "3d",
    "f32",
    "parry-f32",
    "bevy_scene",
    "parallel",
    "enhanced-determinism",
] }
lightyear = { workspace = true, features = [
    "leafwing",
    "avian3d",
] }
rand = { workspace = true }
bevy_rand = { workspace = true }
serde = { workspace = true }
rmp-serde = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-async-std", "sqlite", "chrono"] }
directories = "6.0"
async-io = "2.4.0"
pin-project = "1.1.7"
tower = "0.5.2"
async-channel = "2.3.1"

[[example]]
name = "message"
path = "tests/network/message.rs"
