[package]
name = "corp_server"
version = "0.1.0"
authors = ["Marko Lazić <marko.lazic@comyno.com>"]
edition = "2024"

[dependencies]
corp_shared = { path = "../corp_shared" }
corp_types = { path = "../corp_types" }
corp_proxy = { path = "../corp_proxy" }
corp_login = { path = "../corp_login" }
bevy = { workspace = true, features = [
    "bevy_state",
    "bevy_color",
    "async-io",
    "multi_threaded",
    "serialize",
    "configurable_error_handler",
] }
avian3d = { workspace = true, features = [
    "3d",
    "f32",
    "parry-f32",
    "bevy_scene",
    "parallel",
    "enhanced-determinism",
    "serialize",
] }
rand = { workspace = true }
bevy_rand = { workspace = true }
serde = { workspace = true }
rmp-serde = "1.3"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-async-std", "sqlite", "chrono"] }
directories = "6.0"
async-io = "2.4"
pin-project = "1.1"
tower = "0.5"
async-channel = "2.3"
anyhow = { workspace = true }
surf = { workspace = true }
tracing = "0.1"
kameo = { workspace = true }
tokio = { workspace = true, features = ["full"] }

aeronet = { workspace = true }
aeronet_webtransport = { workspace = true, features = ["server"] }
aeronet_replicon = { workspace = true, features = ["server"] }
bevy_replicon = { workspace = true, features = ["default"] }
bevy_defer = { workspace = true }


[[example]]
name = "message"
path = "tests/network/message.rs"
