[package]
name = "corp_shared"
version = "0.1.0"
authors = ["Marko Lazić <marko.lazic@comyno.com>"]
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["dynamic_linking", "bevy_color", "bevy_state"] }
avian3d = { workspace = true, features = ["3d", "f32", "parry-f32", "default-collider"] }
serde = { workspace = true }
rand = { workspace = true }
bevy_rand = { workspace = true }
bevy_replicon = { workspace = true }
anyhow = { workspace = true }

[features]
client = []