[package]
name = "corp_tests"
version = "0.1.0"
authors = ["Marko Lazić <marko.lazic@comyno.com>"]
edition = "2021"
autotests = false
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"
bevy = "0.9.1"

[[test]]
name = "integration"
path = "tests/lib.rs"
harness = true