[package]
name = "corp-input"
version = "0.1.0"
authors = ["marko.lazic <markolazic@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.3.0"
kurinji = "1.0.3"

# Local
corp-scene = { path = "../corp-scene", version ="0.1.0" }