[package]
name = "corp-live"
version = "0.1.0"
authors = ["Lazić <marko.lazic@comyno.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4.0"

# Local
corp-scene = { path = "../corp-scene", version ="0.1.0" }